samples/_failures_safe/1761316846_339c0b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a299f3b3.c: In function ‘main’:
./samples/SAFE/__tmp_a299f3b3.c:164:5: error: ‘init’ undeclared (first use in this function); did you mean ‘int’?
  164 |     init
      |     ^~~~
      |     int
./samples/SAFE/__tmp_a299f3b3.c:164:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_a299f3b3.c:164:9: error: expected ‘;’ at end of input
  164 |     init
      |         ^
      |         ;
./samples/SAFE/__tmp_a299f3b3.c:164:5: error: expected declaration or statement at end of input
  164 |     init
      |     ^~~~
